fix sticky scrolling on safari

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -377,7 +377,7 @@ overflow-x: hidden;
 }
 
 .detail-section {
-    overflow: auto;
+    overflow: hidden;
 }
 
 .detail-section__description {
